# fedes

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: ci.yml
apps/cli/: CMakeLists.txt  fedes.cpp  models.cpp  models.h  models.hpp  octree.cpp  octree.h  octree.hpp
apps/experimental/: CMakeLists.txt  experimental.cpp
benchmarks/: CMakeLists.txt
benchmarks/indexing/octree/: construction.cpp
benchmarks/indexing/octree/construction/: construct.cpp  large.cpp  m1.cpp  m2.cpp  m3.cpp  parallel.cpp
benchmarks/interpolations/octree/: npm.cpp  octree.cpp
benchmarks/interpolations/octree/dmue/: m1.cpp
benchmarks/interpolations/octree/fop/: m1.cpp
benchmarks/interpolations/octree/npm/: m1.cpp
include/fedes/common/: files.hpp  strings.hpp
include/fedes/data/: vector3.hpp
include/fedes/indexing/: octant.h  octree.h
include/fedes/indexing/mx-octree/: octant.hpp  octree.hpp
include/fedes/indexing/octree/: interpolations.hpp  octant.hpp  octree.hpp  traversals.hpp
include/fedes/instrumentation/: timer.hpp
include/fedes/interop/: dynamic_array.h  dynamic_array.hpp
include/fedes/maths/: direction.hpp  distance.hpp  vector3.hpp
include/fedes/memory/: chunk_allocator.hpp
include/fedes/model/: model.hpp  parsers.hpp  writers.hpp
include/fedes/thread/: thread_pool.hpp
models/Example-3D-beam-small/: Model1-Input-Marc.t19  Model1-output-Marc.70  Model2-Input-Abaqus.inp  model1.vtu  model2.vtu  model3.vtu  model4.vtu
models/Example1-ManufacturingProcessChain-2ndLoop/: Process-1-Abaqus-Input.inp
models/Example2/: piston-hex.inp  piston-tet.inp
src/: CMakeLists.txt  fedes.cpp
src/app/: CMakeLists.txt  fedes.cpp  models.cpp  models.hpp  octree.cpp  octree.hpp
src/common/: files.cpp  strings.cpp
src/data/: vector3.cpp
src/fedes/: CMakeLists.txt
src/fedes/common/: files.cpp  files.h  log.h  strings.cpp  strings.h  strings.hpp
src/fedes/indexing/mx-octree/: interpolations.cpp  interpolations.h  interpolations.hpp  octant.cpp  octant.h  octant_comparator.cpp  octant_comparator.h  octant_comparator.hpp  octree.cpp  octree.h  traversals.cpp  traversals.h  traversals.hpp
src/fedes/indexing/octree/: octant.h  octant_comparator.h  octree.h  traversals.h
src/fedes/indexing/parallel-octree/: linear_octant.cpp
src/fedes/instrumentation/: timer.cpp  timer.h  timer.hpp
src/fedes/interpolations/: octree.cpp  octree.h
src/fedes/interpolations/octree/: dmue.h  esf.h  fop.h  npm.h  octree.h
src/fedes/maths/: distance.cpp  distance.h  distance.hpp  element_type.cpp  element_type.h  geometry.h  random.h  vector3.cpp  vector3.h  vector3.hpp  z_ordering.cpp  z_ordering.h
src/fedes/memory/: chunk_allocator.cpp
src/fedes/model/: examples.cpp  examples.h  export.cpp  export.h  model.cpp  model.h  model.hpp  parsers.cpp  parsers.h  writers.cpp  writers.h
src/fedes/thread/: thread_pool.cpp
src/indexing/: octant.cpp  octree.cpp
src/indexing/mx-octree/: interpolations.cpp  octant.cpp  octree.cpp  traversals.cpp
src/indexing/octree/: interpolations.cpp  octant.cpp  octree.cpp  traversals.cpp
src/instrumentation/: timer.cpp  timer.hpp
src/interop/: dynamic_array.cpp
src/maths/: direction.cpp  distance.cpp  vector3.cpp
src/memory/: chunk_allocator.cpp
src/model/: model.cpp  parsers.cpp  writers.cpp
tests/: CMakeLists.txt
tests/common/: strings.cpp
tests/data/: vector3.cpp
tests/indexing/mx-octree/: interpolations.cpp  octant.cpp  octant_comparator.cpp  octree.cpp  traversals.cpp
tests/indexing/octree/: construct.cpp  construct_element.cpp  construct_parallel.cpp  field.cpp  find.cpp  interpolations.cpp  nearest.cpp  octant.cpp  octant_comparator.cpp  octree.cpp  post_order.cpp  radius.cpp  traversals.cpp
tests/interop/: dynamic_array.cpp
tests/interpolations/: mx_octree.cpp
tests/interpolations/octree/: dmue.cpp  esf.cpp  fop.cpp  npm.cpp
tests/maths/: direction.cpp  distance.cpp  geometry.cpp  vector3.cpp  z_ordering.cpp
tests/model/: parsers.cpp  writers.cpp
